update api name to plural noun (project -> projects)
